--- a/package.json
+++ b/package.json
@@ -2,17 +2,24 @@
     "name": "markdown-editor",
     "version": "1.0.0",
     "scripts": {
-        "start": "echo 'Hello! package.json'",
+        "start": "webpack serve --mode=development",
         "build": "webpack --mode=production"
     },
     "dependencies": {
         "@types/react": "^17.0.75",
         "@types/react-dom": "^17.0.25",
+        "@types/react-router-dom": "^5.3.3",
+        "@types/styled-components": "^5.1.34",
+        "dexie": "^3.2.5",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-markdown": "^6.0.3",
+        "react-router-dom": "^5.3.4",
+        "styled-components": "^5.3.11",
         "ts-loader": "^9.5.1",
         "typescript": "^4.9.5",
         "webpack": "^5.90.1",
-        "webpack-cli": "^4.10.0"
+        "webpack-cli": "^4.10.0",
+        "webpack-dev-server": "^3.11.3"
     }
 }
