--- a/package.json
+++ b/package.json
@@ -6,20 +6,25 @@
         "build": "webpack --mode=production"
     },
     "dependencies": {
+        "@types/marked": "^2.0.5",
         "@types/react": "^17.0.75",
         "@types/react-dom": "^17.0.25",
         "@types/react-router-dom": "^5.3.3",
+        "@types/sanitize-html": "^2.11.0",
         "@types/styled-components": "^5.1.34",
         "dexie": "^3.2.5",
+        "marked": "^2.1.3",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-markdown": "^6.0.3",
         "react-router-dom": "^5.3.4",
+        "sanitize-html": "^2.11.0",
         "styled-components": "^5.3.11",
         "ts-loader": "^9.5.1",
         "typescript": "^4.9.5",
         "webpack": "^5.90.1",
         "webpack-cli": "^4.10.0",
-        "webpack-dev-server": "^3.11.3"
+        "webpack-dev-server": "^3.11.3",
+        "worker-loader": "^3.0.8"
     }
 }
